--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Tour Of Heroes(basic Angular Project)</title>
-  <base href="/">
+  <base href="https://rabihmitri1.github.io/test-1/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>body{margin:2em}body{color:#333;font-family:Cambria,Georgia,serif}*{font-family:Arial,Helvetica,sans-serif}</style><link rel="stylesheet" href="styles.8670747d78e24bf5.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.8670747d78e24bf5.css"></noscript></head>
 <body>
